# wb_scraper

./: .dockerignore  .env.example  .env.prod  .gitignore  Dockerfile  README.md  build-n-run.sh  docker-compose.yaml  docker-entrypoint.sh  lint-fix.sh  lint.sh  pyproject.toml  test.sh
src/: pytest.ini  recreatedb.sh
src/cards/: models.py  serializers.py  tasks.py  urls.py  views.py
src/cards/migrations/: 0001_initial.py  0003_alter_card_user_id.py
src/main/: celery.py  settings.py  urls.py
src/scrape/: utils.py
src/tests/: conftest.py
src/tests/cards/: common.py  conftest.py  test_views.py
src/tests/users/: common.py  test_users.py  test_views.py
src/users/: auth.py  models.py  serializers.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
src/util/: auth.py  scrape.py  stats.py
wb_app/: Dockerfile  requirements.txt
wb_app/src/: celerybeat-schedule  recreatedb.sh
wb_app/src/auth/: auth.py
wb_app/src/cards/: models.py  serializers.py  tasks.py  urls.py  views.py
wb_app/src/cards/migrations/: 0001_initial.py  0002_initial.py
wb_app/src/main/: .env.example  settings.py  urls.py
wb_app/src/scrape/: utils.py
wb_app/src/scrape/internal/: utils.py
wb_app/src/users/: models.py  serializers.py  urls.py  views.py
wb_app/src/users/migrations/: 0001_initial.py  0002_alter_user_email.py
