[tool.poetry]
name = "wildberries-scraper"
version = "0.1.0"
description = "Wildberries Goods Monitor"
authors = ["genndy007 <kochevgenazp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
requests = "^2.27.1"
bs4 = "^0.0.1"
psycopg2 = "^2.9.3"
celery = "^5.2.6"
djangorestframework = "^3.13.1"
PyJWT = "^2.3.0"
django-environ = "^0.8.1"
django-cors-headers = "^3.11.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
